--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "type": "git",
         "url": "https://github.com/ldeleris/ats-vscode.git"
     },
-    "icon": "images/ATS-logo.png",
+    "icon": "images/ATS-Logo.png",
     "categories": [
         "Languages",
         "Snippets"
